# gl2n

./: .dockerignore  Cargo.toml  Dockerfile  docker-compose.yml
src/: controller.rs  discord.rs  http.rs  main.rs
src/controller/: actions.rs  mod.rs  rules.rs
src/controller/actions/: addrole.rs  echo.rs  mod.rs  react.rs  removerole.rs  webhook.rs
src/gateway/: message.rs  mod.rs
